# ChangeLog for gnome-extra/gnome-power-manager
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-power-manager/ChangeLog,v 1.173 2012/05/13 23:59:54 tetromino Exp $

*gnome-power-manager-3.4.0 (13 May 2012)

  13 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gnome-power-manager-3.4.0.ebuild:
  Version bump for gnome-3.4

  05 May 2012; Jeff Horelick <jdhore@gentoo.org>
  gnome-power-manager-2.32.0-r2.ebuild, gnome-power-manager-2.32.0-r3.ebuild,
  gnome-power-manager-3.2.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  29 Apr 2012; Markus Meier <maekke@gentoo.org>
  gnome-power-manager-2.32.0-r3.ebuild:
  x86 stable, bug #410611

  19 Apr 2012; Brent Baude <ranger@gentoo.org>
  gnome-power-manager-2.32.0-r3.ebuild:
  Marking gnome-power-manager-2.32.0-r3 ppc64 stable for bug 410611

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org>
  gnome-power-manager-2.32.0-r3.ebuild:
  Stable for amd64, wrt bug #410611

*gnome-power-manager-2.32.0-r3 (31 Jan 2012)

  31 Jan 2012; Pacho Ramos <pacho@gentoo.org>
  +files/gnome-power-manager-2.32.0-duplicated-battery.patch,
  +gnome-power-manager-2.32.0-r3.ebuild, -gnome-power-manager-2.32.0-r1.ebuild,
  -gnome-power-manager-2.32.0.ebuild:
  Apply ubuntu patch to fix duplicated batteries (bug #385529 by Charles G
  Waldman and Jacek) as I neither suffer any regression with kernel 3.0.x. Drop
  old.

  02 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-power-manager-2.32.0-r2.ebuild:
  Move gnome2_src_prepare after eautoreconf (bug #396713, thanks to Julian W.
  for reporting).

  25 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gnome-power-manager-3.0.2-r1.ebuild,
  -files/gnome-power-manager-3.0.2-idle-status.patch,
  -files/gnome-power-manager-3.0.2-screensaver.patch:
  Drop old.

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  gnome-power-manager-2.32.0-r2.ebuild:
  alpha/ia64/sparc stable wrt #385699
