@@ -13,18 +13,18 @@ DIST gnome-power-manager-3.2.1.tar.xz 734932 RMD160 727a3f97f602058c629f911f74ae
 DIST gnome-power-manager-3.4.0.tar.xz 742884 RMD160 2c7af5d7a7ed7a2fd14be214f0ae3e6384c86054 SHA1 27eee80bf2f4765ca04a20c87ab947e9d774feaf SHA256 2c47786a1ed85b6ba48ad5e74e2584ab7cbc0127fda46359ec4671b1c0286c71
 EBUILD gnome-power-manager-2.32.0-r2.ebuild 3846 RMD160 b76970bda29c7f8ca92c5bda8cf5324f4b793533 SHA1 a351c188bf54c6568a85e46b126485204d0727ab SHA256 46fb055a73ec6c222385bb867e3d1317bb236885720b474b7e167ed2fd5098d4
 EBUILD gnome-power-manager-2.32.0-r3.ebuild 3959 RMD160 7cddc55c7aa3a05b0cee1dd181c6225cec09403d SHA1 36e542aac799c6494b1cc2df6f7dc1a65d879d0b SHA256 3dda34c3e089a3805b86a4e600fb62d12a884ab5f0340fcff0875d678422f3b9
-EBUILD gnome-power-manager-3.2.1.ebuild 1815 RMD160 2090e07c676b34d8814de8302868f0c1ea3249ce SHA1 98af7d17d03d306b68f37c263e45578300687e12 SHA256 8793ff1f778b9187671003b0c7508d595d6eea5d82f3de36e3e3de30f112a717
-EBUILD gnome-power-manager-3.4.0.ebuild 1819 RMD160 4e0a281ee8a52d06292ab4a99ba01bdda2c89ec5 SHA1 ffcc0774eefd5bd470f3559600441c095abd23d2 SHA256 7b7d58a1944709eb10b1af5f951e60f1f3e7773d5383f477f573b7b5ba0db3e9
-MISC ChangeLog 29653 RMD160 33e3c1c9cdc508ec9091ee356a5b1dcdb01f9153 SHA1 8caf1de73edc6330bfba0dbe53bf5f0cafd5ae8a SHA256 5abc8b3b7ac02afcbd54f102e3901c0a8232a9eb9a1c370fba6179c7e331cca0
+EBUILD gnome-power-manager-3.2.1.ebuild 1775 RMD160 481ca0f22756068e4a8129138263e2fc551a168d SHA1 c66608e5e18d805a0e86bb6169d378cfdaebc12c SHA256 50e069fb3585eb1b68e9aea995a56b7d6f0a5af3b17e866a13abfb8d7c51b9d1
+EBUILD gnome-power-manager-3.4.0.ebuild 1776 RMD160 f010efdce067575cdf42ba7f00dd8925aba8a424 SHA1 78d1a00df7c0b9c32c22c383f0281b02bf8af63b SHA256 45a37ac945aba6aa7308d7b0c0225e7e9cf260a3b4787424cec17ec98896f933
+MISC ChangeLog 29935 RMD160 9e3f9fe1a6cc5fa4279e28f91c0313339c810125 SHA1 18265aa2b7f754c3f75147aed70eb2d8697f0c69 SHA256 fc910c6ad89bc8e9ec176f894f4395fbde9f00fd18a51a31c580d1b4ca75f045
 MISC metadata.xml 401 RMD160 f8df805516184795fc0eae8621e623000179dcf7 SHA1 f34033fb88478710119be397997f9fdb6fba56d9 SHA256 6c07ca73308c0284c064e45eecff3b959b6d84c5cdf0b557eca7b4fc398ea639
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPsEsAAAoJEJ0WA1zPCt1h52sH/juXP2ElQxj5EZKDRDD8iOOP
-7iMkmzyENaSBegbvDU4l50xC9JPprsErHEZNJAdXQAAXapKH/DLawQH0roEOjTtr
-1OAj26BUXyKVwqze7KKRr/14+/hw82Og/yIeN9/3795V7w6rAlRB3xbZlzPf1Qfo
-AvTZf89JfJCnzFvbHH3jZpps3IgfcniYwwxV5ma+atJ5vz+fbG9/AAhXI/gAQBG7
-aIOSE5WpKh8u/qb213io13WPUCuZ900EwTh5sLPQcHLRAPLoHwtmuYv3go3S4hv/
-VNyASFAoUqvhoCxQu7AdNKqVaVPXKvGcZdUVK0G9zwFL/8x42p4Hf8nulbYPfU8=
-=1/A7
+iQEcBAEBAgAGBQJPsGaTAAoJEJ0WA1zPCt1hAh4H/RZFrv1ifFJH/NfNmFCran7H
+Pnv0O7RRNk17PXpp52Pqo8FBgI6WlujbDG78uFR43Q4qmN426R8TjeX63W++0MBE
+bbpMIPTuXcTIO215Hg0N1Om2V2OEOCseqh7VJjZukJyoDgVGjaE0xFlmToWyS0Q0
+YP6Qj7KpwIXXAuJOzbttpp6cfq2dsv/3cijt8EGkG4fs2tYTpgU9ovDxJ1FLW4dw
+bfSX+CuBe3MH4/yROsDpLk+NtKSn8CZVpQuJspgcKR81yF42MSVUKhXk4sodouLv
+EPF9SMqDjbsXuWYpjv2sxVRVADkA0LX/WR2Y2IgP/IX9IuwNl1bAgKhlp9QAGeE=
+=B3s5
 -----END PGP SIGNATURE-----
