@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome-power-manager
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-power-manager/ChangeLog,v 1.173 2012/05/13 23:59:54 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-power-manager/ChangeLog,v 1.174 2012/05/14 01:57:33 tetromino Exp $
+
+  14 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  gnome-power-manager-3.2.1.ebuild, gnome-power-manager-3.4.0.ebuild:
+  Punt unnecessary polkit and consolekit dependencies (bug #407653, thanks to
+  Andreas Proschofsky). Add missing gnome-icon-theme-symbolic dependency.
 
 *gnome-power-manager-3.4.0 (13 May 2012)
 
